--- a/product-service/core/pom.xml
+++ b/product-service/core/pom.xml
@@ -5,16 +5,23 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mysite</groupId>
-        <artifactId>onlineshop</artifactId>
+        <artifactId>product-service</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>user-service</artifactId>
+    <artifactId>core</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.mysite</groupId>
+            <artifactId>model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
