--- a/cart-service/model/pom.xml
+++ b/cart-service/model/pom.xml
@@ -3,17 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.mysite</groupId>
+        <artifactId>cart-service</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.mysite</groupId>
-    <artifactId>cart-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>core</module>
-        <module>model</module>
-        <module>adapters</module>
-        <module>model-public</module>
-    </modules>
+    <artifactId>model</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
