--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,14 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.5</version>
-		<relativePath/> <!-- Lookup parent from the repository -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mysite</groupId>
 	<artifactId>onlineshop</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<name>onlineshop</name>
+	<description>Microservice online shop system</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -20,10 +22,10 @@
 		<developer/>
 	</developers>
 	<modules>
+		<module>user-service</module>
 		<module>product-service</module>
 		<module>cart-service</module>
 		<module>order-service</module>
-		<module>user-service</module>
 	</modules>
 	<scm>
 		<connection/>
@@ -37,16 +39,23 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
