--- a/product-service/core/pom.xml
+++ b/product-service/core/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>model-public</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.17.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
