--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,20 @@ services:
     networks:
       - my-network
 
+  product:
+    image: productimage
+    container_name: product_service
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://dbProduct:5432/onlineshop-product
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: admin
+    ports:
+      - "8080:8080"
+    depends_on:
+      - dbProduct
+    networks:
+      - my-network
+
 volumes:
   postgres_data:
   pgadmin_data:
