open feing config

--- a/user-service/adapters/src/main/resources/application.properties
+++ b/user-service/adapters/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=5050
 
-spring.cloud.openfeign.client.config.postClient.url=http://localhost:8080
+spring.cloud.openfeign.client.config.productService.url=http://localhost:8080
+spring.cloud.openfeign.client.config.cartService.url=http://localhost:7070
+spring.cloud.openfeign.client.config.orderService.url=http://localhost:6060
+spring.cloud.openfeign.circuitbreaker.enabled=true
