--- a/cart-service/adapters/src/main/resources/application.properties
+++ b/cart-service/adapters/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=7070
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/onlineshop-product
+spring.datasource.url=jdbc:postgresql://localhost:5432/onlineshop-cart
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
