--- a/product-service/adapters/pom.xml
+++ b/product-service/adapters/pom.xml
@@ -10,6 +10,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>adapters</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <mapstruct.version>1.5.5.final</mapstruct.version>
@@ -94,6 +95,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
