--- a/cart-service/adapters/src/main/resources/application.properties
+++ b/cart-service/adapters/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 server.port=7070
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/onlineshop-cart
+spring.datasource.url=jdbc:postgresql://localhost:7071/onlineshop-cart
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
-
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.liquibase.change-log=classpath:/databaseChangeLog/master.yaml
 spring.cloud.openfeign.client.config.postClient.url=http://localhost:8080/products
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
