--- a/pom.xml
+++ b/pom.xml
@@ -1,59 +1,37 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<!-- Parent POM -->
-	<groupId>com.mysite</groupId>
-	<artifactId>onlineshop</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <groupId>com.mysite</groupId>
+    <artifactId>onlineshop</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-	<name>Onlineshop</name>
-	<description>Microservice online shop system</description>
+    <modules>
+        <module>product-service</module>
+        <module>cart-service</module>
+        <module>order-service</module>
+        <module>user-service</module>
+    </modules>
 
-	<!-- Modules -->
-	<modules>
-		<module>user-service</module>
-		<module>product-service</module>
-		<module>cart-service</module>
-		<module>order-service</module>
-	</modules>
+    <properties>
+        <java.version>21</java.version>
+        <spring.boot.version>3.4.5</spring.boot.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
 
-	<properties>
-		<java.version>21</java.version> <!-- Ustaw wersję JDK -->
-	</properties>
-
-	<!-- Dependencies that are shared among modules -->
-	<dependencies>
-		<!-- Lombok for generating boilerplate code -->
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
-				<configuration>
-					<source>21</source> <!-- Upewnij się, że masz właściwą wersję JDK -->
-					<target>21</target>
-					<annotationProcessorPaths>
-						<annotationProcessorPath>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<version>1.18.30</version>
-						</annotationProcessorPath>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
